@@ -2,7 +2,7 @@
 
 // Pandora FMS - http://pandorafms.com
 // ==================================================
-// Copyright (c) 2005-2009 Artica Soluciones Tecnologicas
+// Copyright (c) 2005-2010 Artica Soluciones Tecnologicas
 // Please see http://pandorafms.org for full contribution list
 
 // This program is free software; you can redistribute it and/or
@@ -14,18 +14,22 @@
 // GNU General Public License for more details.
 
 // Load global vars
-require_once ('include/config.php');
+global $config;
 
 check_login ();
+
+// This defines the working user. Beware with this, old code get confusses
+// and operates with current logged user (dangerous).
+
 $id = get_parameter ('id', $config['id_user']); // ID given as parameter
+
 $user_info = get_user_info ($id);
 if ($user_info["language"] == ""){
 	$user_info["language"] = $config["language"];
 }
-$id = $user_info['id_user'];
 
 if (! give_acl ($config['id_user'], 0, "UM")) {
-	audit_db ($config['id_user'], $REMOTE_ADDR, "ACL Violation",
+	audit_db ($config['id_user'], $_SERVER['REMOTE_ADDR'], "ACL Violation",
 		"Trying to access User Management");
 	require ("general/noaccess.php");
 	return;
@@ -92,7 +96,7 @@ if ($create_user) {
 	else {
 		$result = create_user ($id, $password_new, $values);
 
-		audit_db ($config['id_user'], $REMOTE_ADDR, "User management",
+		audit_db ($config['id_user'], $_SERVER['REMOTE_ADDR'], "User management",
 		"Created user ".safe_input($id));
 
 		print_result_message ($result,
@@ -132,7 +136,7 @@ if ($update_user) {
 				print_error_message (__('Passwords does not match'));
 			}
 		} else {
-			audit_db ($config['id_user'], $REMOTE_ADDR, "User management",
+			audit_db ($config['id_user'], $_SERVER['REMOTE_ADDR'], "User management",
 		"Updated user ".safe_input($id));
 			print_result_message ($res1,
 				__('User info successfully updated'),
@@ -148,10 +152,10 @@ if ($update_user) {
 }
 
 if ($add_profile) {
-	$id2 = (string) get_parameter ('id_user');
+	$id2 = (string) get_parameter ('id');
 	$group2 = (int) get_parameter ('assign_group');
 	$profile2 = (int) get_parameter ('assign_profile');
-	audit_db ($config['id_user'], $REMOTE_ADDR, "User management",
+	audit_db ($config['id_user'], $_SERVER['REMOTE_ADDR'], "User management",
 		"Added profile for user ".safe_input($id2));
 	$return = create_user_profile ($id2, $profile2, $group2);
 	print_result_message ($return,
@@ -160,13 +164,13 @@ if ($add_profile) {
 }
 
 if ($delete_profile) {
-	$id = (string) get_parameter ('id_user');
+	$id2 = (string) get_parameter ('id_user');
 	$id_up = (int) get_parameter ('id_user_profile');
 		
-	audit_db ($config['id_user'], $REMOTE_ADDR, "User management",
-		"Deleted profile for user ".safe_input($id));
+	audit_db ($config['id_user'], $_SERVER['REMOTE_ADDR'], "User management",
+		"Deleted profile for user ".safe_input($id2));
 
-	$return = delete_user_profile ($id, $id_up);
+	$return = delete_user_profile ($id2, $id_up);
 	print_result_message ($return,
 		__('Successfully deleted'),
 		__('Could not be deleted'));
@@ -303,7 +307,7 @@ $data[0] .= print_select (get_profiles (), 'assign_profile', 0, '', __('None'),
 $data[1] = print_select (get_user_groups ($config['id_user'], 'UM'),
 	'assign_group', 0, '', __('None'), 0, true, false, false);
 $data[2] = print_input_image ('add', 'images/add.png', 1, '', true);
-$data[2] .= print_input_hidden ('id_user', $id, true);
+$data[2] .= print_input_hidden ('id', $id, true);
 $data[2] .= print_input_hidden ('add_profile', 1, true);
 $data[2] .= '</form>';
 
